--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "github.com/AbuTaher06/task-manager-app",
   "name": "task-manager-app",
   "private": true,
   "version": "0.0.0",
