Trying fix deploy error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "github.com/AbuTaher06/task-manager-app",
+  "homepage": "https://AbuTaher06.github.io/task-manager-app",
   "name": "task-manager-app",
   "private": true,
   "version": "0.0.0",
